--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                <p class="descp-p">Junior developer with passion, good knowledge and open to learn new technologies.</p>
            </div>
            <div class="home-image">
-               <img  class="home-img" src="https://github.com/emreozturanli/Portfolio-Website-Template/blob/master/img/leon-1994-movie-wallpaper.jpg" alt="leon">
+               <img  class="home-img" src="/img/leon-1994-movie-wallpaper.jpg" alt="leon">
            </div>
         </section>
 
